@startuml

interface IPrinter {
    +int getId()
    +String getName()
    +boolean printFits(Print)
    +int calculatePrintTime(Print)
}

abstract class Printer implements IPrinter {
    -int id
    -String name
    -String manufacturer
    -final int maxX
    -final int maxY
    -final int maxZ
    -Spool currentSpool
    +Spool getCurrentSpool()
    +void setCurrentSpool(Spool)
}

class MultiColorPrinter extends Printer {
    -int maxColors
    -Spool spool2
    -Spool spool3
    -Spool spool4
    +void setCurrentSpools(List<Spool>)
}

interface ISpoolManager {
    +List<Spool> getAvailableSpools()
    +void addSpool(Spool)
    +Spool getSpoolById(int)
}

class SpoolManager implements ISpoolManager {
    -List<Spool> spools
    +List<Spool> getAvailableSpools()
    +void addSpool(Spool)
    +Spool getSpoolById(int)
}

class Spool {
    -final int id
    -final String color
    -final FilamentType filamentType
    -double length
    +int getId()
    +double getLength()
    +String getColor()
    +FilamentType getFilamentType()
    +boolean reduceLength(double)
}

enum FilamentType {
    PLA
    PETG
    ABS
}

class PrinterManager {
    -List<IPrinter> printers
    -List<IPrinter> freePrinters
    +void addPrinter(IPrinter)
    +List<IPrinter> getAvailablePrinters()
    +void markPrinterAsBusy(IPrinter)
    +void markPrinterAsFree(IPrinter)
}

class TaskManager {
    -List<PrintTask> pendingTasks
    -Map<IPrinter, PrintTask> runningTasks
    +void addTask(PrintTask task)
    +void assignTasks(PrinterManager printerManager)
    +void completeTask(IPrinter printer)
    +void handleTaskFailure(IPrinter printer)
}

class PrintTask {
    -Print print
    -List<String> colors
    -FilamentType filamentType
    +String toString()
    +List<String> getColors()
    +FilamentType getFilamentType()
    +Print getPrint()
}

class Print {
    -String name
    -int height
    -int width
    -int length
    -List<Double> filamentLength
    -int printTime
    +String getName()
    +int getHeight()
    +int getWidth()
    +int getLength()
    +List<Double> getFilamentLength()
    +int getPrintTime()
}

TaskManager o-- PrintTask
TaskManager o-- PrinterManager
PrinterManager *-- IPrinter
PrinterManager o-- SpoolManager
SpoolManager *-- Spool
PrintTask *-- Print
PrintTask *-- FilamentType
MultiColorPrinter *-- Spool
@enduml